<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >

    	<TextView
    		android:id="@+id/tvRecordId"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/tvRecordId" />

    	<TextView
    		android:id="@+id/tvRecordAmount"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="5"
    		android:gravity="right"
    		android:text="@string/tvRecordAmount"
    		android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >

        <TextView
        	android:id="@+id/tvRecordTitle"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="2"
        	android:text="@string/tvRecordTitle"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
        	android:id="@+id/tvRecordDate"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:gravity="right"
        	android:text="@string/tvRecordDate" />

    </LinearLayout>

</LinearLayout>
