<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >

    	<TextView
    		android:id="@+id/tvAccountId"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:gravity="center"
    		android:text="@string/tvAccountId" />

    	<TextView
    		android:id="@+id/tvAccountBalance"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="5"
    		android:gravity="right"
    		android:text="@string/tvAccountBalance"
    		android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" >

        <TextView
        	android:id="@+id/tvAccountTitle"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="2"
        	android:gravity="left"
        	android:text="@string/tvAccountTitle"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
        	android:id="@+id/tvAccountRecords"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:gravity="right"
        	android:text="@string/tvAccountRecords" />

    </LinearLayout>

</LinearLayout>
