<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

    <ScrollView
    	android:id="@+id/scrlNewUser"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:visibility="visible" >

    	<LinearLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:padding="10dp" >

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="16dp"
    			android:gravity="center" >

    			<TextView
    				android:id="@+id/tvNewUserTitle"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/tvNewUserTitle"
    				android:textAppearance="?android:attr/textAppearanceLarge" />

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="10dp" >

    			<TextView
    				android:id="@+id/tvNewUserLogin"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.40"
    				android:text="@string/tvNewUserLogin" />

    			<EditText
    				android:id="@+id/etNewUserLogin"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.60"
    				android:ems="10" />

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="10dp" >

    			<TextView
    				android:id="@+id/tvNewUserPassword"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.40"
    				android:text="@string/tvNewUserPassword" />

    			<EditText
    				android:id="@+id/etNewUserPassword"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.60"
    				android:ems="10"
    				android:inputType="textPassword" />

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="10dp" >

    			<TextView
    				android:id="@+id/tvNewUserPasswordRep"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.40"
    				android:text="@string/tvNewUserPasswordRep" />

    			<EditText
    				android:id="@+id/etNewUserPasswordRep"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.60"
    				android:ems="10"
    				android:inputType="textPassword" />

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="10dp" >

    			<TextView
    				android:id="@+id/tvNewUserFirstname"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.40"
    				android:text="@string/tvNewUserFirstname" />

    			<EditText
    				android:id="@+id/etNewUserFirstname"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.60"
    				android:ems="10" />

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="10dp" >

    			<TextView
    				android:id="@+id/tvNewUserSurname"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.40"
    				android:text="@string/tvNewUserSurname" />

    			<EditText
    				android:id="@+id/etNewUserSurname"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.60"
    				android:ems="10" >

    				<requestFocus />
    			</EditText>

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="10dp" >

    			<TextView
    				android:id="@+id/tvNewUserMddlename"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.40"
    				android:text="@string/tvNewUserMiddlename" />

    			<EditText
    				android:id="@+id/etNewUserMiddlename"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.60"
    				android:ems="10" />

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginBottom="10dp" >

    			<TextView
    				android:id="@+id/tvNewUserEmail"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.40"
    				android:text="@string/tvNewUserEmail" />

    			<EditText
    				android:id="@+id/etNewUserEmail"
    				android:layout_width="0dp"
    				android:layout_height="wrap_content"
    				android:layout_weight="0.60"
    				android:ems="10" />

    		</LinearLayout>

    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginRight="10dp"
    			android:gravity="center" >
    			
    			<include layout="@layout/lt_error"/>
 			</LinearLayout>
    		
    		<LinearLayout
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_marginRight="10dp"
    			android:gravity="center" >

    			<Button
    				android:id="@+id/btnNewUserSubmit"
    				android:layout_width="match_parent"
    				android:layout_height="wrap_content"
    				android:text="@string/btnNewUserSubmit" />

    		</LinearLayout>
    	</LinearLayout>

    </ScrollView>

</LinearLayout>